home-about-added

--- a/index.html
+++ b/index.html
@@ -22,26 +22,63 @@
 
     <!-- HOME -->
     <section id="home">
-        <div class="container">
-            <img src="./assets/img-template-svg.svg" alt="banner-image" class="banner_img">
-            <article>
-                <h1>hi! I'm <span class="name">Utkarsh Singh Khokhar</span> and I <strong>create</strong> websites.</h1>
-            </article>
-        </div>
+            <img src="./assets/img-template-svg.svg" alt="banner image" class="banner-img">
+            <div class="txt-container home-txt">
+                <p>hi! I'm  <br>
+                    <strong><span class="name">Utkarsh Singh Khokhar</span></strong><br>
+                    and I <strong>create</strong> websites.
+                    <i class="fa-regular fa-hand-peace"></i>
+                </p>
+            </div>
     </section>
 
     <!-- ABOUT -->
     <section id="about">
-        <div class="container">
-
-        </div>
+            <div class="about-txt txt-container">
+                <h1>What do I do?</h1>
+                <p>Being an art enthusiast, I crave for creative explorations. I regularly sail my voyages in the vast oceans of ingenuity. As a result of which, I’m a guy who can design webpages for you. After designing your pages, you don’t need to look for a nerdy developer out there to build that page. I’m quite a narcissict when it comes to my work, so why would I give my design to other guy for developement. Considering all of that, I’m a front-end developer who can make your own website go live on the interenet. But what about the content you are going to showcase on your website... don’t worry, I got you covered. Your little man over here is an avid reader and occasional writer. 
+                <br>
+                So basically, I’ve got what it takes to give you all that you need! 
+                <br><br>
+                See you on the other side, mate!
+                <br>
+                
+                <strong>brb :)</strong>
+            
+                </p>
+            </div>
+            <img src="./assets/img-template-svg.svg" alt="" class="about-img banner-img">
     </section>
 
     <!-- PROJECT -->
     <section id="project">
-        <div class="container">
-
-        </div>
+            <h1 style="text-align: right;">What I've done...</h1>
+            <div class="container">
+                <div class="card c-1">
+                    <img src="./assets/img-template-svg.svg" alt="" class="card-banner">
+                    <a href="#" target="_blank" class="card-name">project name</a>
+                <!-- </div>
+                <div class="card c-2">
+                    <img src="./assets/img-template-svg.svg" alt="" class="card-banner">
+                    <a href="#" target="_blank" class="card-name">project name</a>
+                </div>
+                <div class="card c-3">
+                    <img src="./assets/img-template-svg.svg" alt="" class="card-banner">
+                    <a href="#" target="_blank" class="card-name">project name</a>
+                </div>
+                <div class="card c-4">
+                    <img src="./assets/img-template-svg.svg" alt="" class="card-banner">
+                    <a href="#" target="_blank" class="card-name">project name</a>
+                </div>
+                <div class="card c-5">
+                    <img src="./assets/img-template-svg.svg" alt="" class="card-banner">
+                    <a href="#" target="_blank" class="card-name">project name</a>
+                </div>
+                <div class="card c-6">
+                    <img src="./assets/img-template-svg.svg" alt="" class="card-banner">
+                    <a href="#" target="_blank" class="card-name">project name</a>
+                </div> -->
+            </div>
     </section>
 
     <!-- Contact -->
