--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     </header>
 
     <!-- HOME -->
-    <section id="home" class="flex wrap j-center a-center">
+    <main>
+        <section id="home" class="flex wrap j-center a-center">
             <img src="./assets/img-template-svg.svg" alt="banner image" class="banner-img">
             <div class="txt-container home-txt">
                 <p>hi! I'm  <br>
@@ -30,77 +31,77 @@
                     <i class="fa-regular fa-hand-peace"></i>
                 </p>
             </div>
-    </section>
+        </section>
 
-    <!-- ABOUT -->
-    <section id="about" class="flex wrap j-center a-center">
-            <div class="about-txt txt-container">
-                <h1>What do I do?</h1>
-                <p>Being an art enthusiast, I crave for creative explorations. I regularly sail my voyages in the vast oceans of ingenuity. As a result of which, I’m a guy who can design webpages for you. After designing your pages, you don’t need to look for a nerdy developer out there to build that page. I’m quite a narcissict when it comes to my work, so why would I give my design to other guy for developement. Considering all of that, I’m a front-end developer who can make your own website go live on the interenet. But what about the content you are going to showcase on your website... don’t worry, I got you covered. Your little man over here is an avid reader and occasional writer. 
-                <br>
-                So basically, I’ve got what it takes to give you all that you need! 
-                <br><br>
-                See you on the other side, mate!
-                <br>
+        <!-- ABOUT -->
+        <section id="about" class="flex wrap j-center a-center">
+                <div class="about-txt txt-container">
+                    <h1>What do I do?</h1>
+                    <p>Being an art enthusiast, I crave for creative explorations. I regularly sail my voyages in the vast oceans of ingenuity. As a result of which, I’m a guy who can design webpages for you. After designing your pages, you don’t need to look for a nerdy developer out there to build that page. I’m quite a narcissict when it comes to my work, so why would I give my design to other guy for developement. Considering all of that, I’m a front-end developer who can make your own website go live on the interenet. But what about the content you are going to showcase on your website... don’t worry, I got you covered. Your little man over here is an avid reader and occasional writer. 
+                    <br>
+                    So basically, I’ve got what it takes to give you all that you need! 
+                    <br><br>
+                    See you on the other side, mate!
+                    <br>
+                    <strong>brb :)</strong>
                 
-                <strong>brb :)</strong>
-            
+                    </p>
+                </div>
+                <img src="./assets/img-template-svg.svg" alt="" class="about-img banner-img">
+        </section>
+
+        <!-- PROJECT -->
+        <section id="project" class="flex wrap j-center a-center">
+                <h1 style="text-align: right;">What I've done</h1>
+
+                <div class="card-container flex wrap j-center a-center">
+                    <div class="card c-1">
+                        <img src="./assets/img-template-svg.svg" alt="" class="card-banner">
+                        <a href="#" target="_blank" class="card-name">Project Name</a>
+                    </div>
+                    <div class="card c-2">
+                        <img src="./assets/img-template-svg.svg" alt="" class="card-banner">
+                        <a href="#" target="_blank" class="card-name">Project Name</a>
+                    </div>
+                    <div class="card c-3">
+                        <img src="./assets/img-template-svg.svg" alt="" class="card-banner">
+                        <a href="#" target="_blank" class="card-name">Project Name</a>
+                    </div>
+                    <div class="card c-4">
+                        <img src="./assets/img-template-svg.svg" alt="" class="card-banner">
+                        <a href="#" target="_blank" class="card-name">Project Name</a>
+                    </div>
+                    <div class="card c-5">
+                        <img src="./assets/img-template-svg.svg" alt="" class="card-banner">
+                        <a href="#" target="_blank" class="card-name">Project Name</a>
+                    </div>
+                    <div class="card c-6">
+                        <img src="./assets/img-template-svg.svg" alt="" class="card-banner">
+                        <a href="#" target="_blank" class="card-name">Project Name</a>
+                    </div>
+                </div>
+        </section>
+
+        <!-- Contact -->
+        <footer id="contact">
+            <div class="txt-container contact-txt">
+                <h1>Wanna know me better?</h1>
+                <p>
+                    You scrolled to the bottom... must’ve been curious about something. And I, being a very supportive person highyly bappreciate the process of resolving issues of curious beings. So please consider providing me the pleasure of resolving your stuff.
+                    <br>
+                    If not that, we can have a casual chit-chat... would be fun.
                 </p>
             </div>
-            <img src="./assets/img-template-svg.svg" alt="" class="about-img banner-img">
-    </section>
-
-    <!-- PROJECT -->
-    <section id="project" class="flex wrap j-center a-center">
-            <h1 style="text-align: right;">What I've done</h1>
-
-            <div class="card-container flex wrap j-center a-center">
-                <div class="card c-1">
-                    <img src="./assets/img-template-svg.svg" alt="" class="card-banner">
-                    <a href="#" target="_blank" class="card-name">Project Name</a>
-                </div>
-                <div class="card c-2">
-                    <img src="./assets/img-template-svg.svg" alt="" class="card-banner">
-                    <a href="#" target="_blank" class="card-name">Project Name</a>
-                </div>
-                <div class="card c-3">
-                    <img src="./assets/img-template-svg.svg" alt="" class="card-banner">
-                    <a href="#" target="_blank" class="card-name">Project Name</a>
-                </div>
-                <div class="card c-4">
-                    <img src="./assets/img-template-svg.svg" alt="" class="card-banner">
-                    <a href="#" target="_blank" class="card-name">Project Name</a>
-                </div>
-                <div class="card c-5">
-                    <img src="./assets/img-template-svg.svg" alt="" class="card-banner">
-                    <a href="#" target="_blank" class="card-name">Project Name</a>
-                </div>
-                <div class="card c-6">
-                    <img src="./assets/img-template-svg.svg" alt="" class="card-banner">
-                    <a href="#" target="_blank" class="card-name">Project Name</a>
-                </div>
+            <div class="social-container flex a-center j-center">
+                <a href="" class="social-links"><i class="fa-brands  fa- fa-discord"></i></a>
+                <a href="" class="social-links"><i class="fa-brands  fa- fa-instagram"></i></a>
+                <a href="" class="social-links"><i class="fa-brands  fa- fa-linkedin"></i></a>
+                <a href="" class="social-links"><i class="fa-regular fa-  fa-envelope fa"></i></a>
+                <a href="" class="social-links"><i class="fa-brands  fa- fa-whatsapp"></i></a>
+                <a href="" class="social-links"><i class="fa-brands  fa- fa-github"></i></a>
             </div>
-    </section>
 
-    <!-- Contact -->
-    <footer id="contact">
-        <div class="txt-container contact-txt">
-            <h1>Wanna know me better?</h1>
-            <p>
-                You scrolled to the bottom... must’ve been curious about something. And I, being a very supportive person highyly bappreciate the process of resolving issues of curious beings. So please consider providing me the pleasure of resolving your stuff.
-                <br>
-                If not that, we can have a casual chit-chat... would be fun.
-            </p>
-        </div>
-        <div class="social-container flex a-center j-center">
-            <a href="" class="social-links"><i class="fa-brands  fa- fa-discord"></i></a>
-            <a href="" class="social-links"><i class="fa-brands  fa- fa-instagram"></i></a>
-            <a href="" class="social-links"><i class="fa-brands  fa- fa-linkedin"></i></a>
-            <a href="" class="social-links"><i class="fa-regular fa-  fa-envelope fa"></i></a>
-            <a href="" class="social-links"><i class="fa-brands  fa- fa-whatsapp"></i></a>
-            <a href="" class="social-links"><i class="fa-brands  fa- fa-github"></i></a>
-        </div>
-
-    </footer>
+        </footer>
+    </main>
 </body>
 </html>
