--- a/index.html
+++ b/index.html
@@ -9,20 +9,31 @@
     <title>U.S.KHOKHAR</title>
 </head>
 <body>
-    <header>
+    <header class="flex j-around a-center col">
+        <img src="./assets/img-template-svg.svg" alt="" class="hero-img">
         <nav>
-            <ul>
-                <li><a href="#home" class="nav_link">home</a></li>
-                <li><a href="#about" class="nav_link">about</a></li>
-                <li><a href="#project" class="nav_link">projects</a></li>
-                <li><a href="#contact" class="nav_link">contact</a></li>
+            <ul class="flex col">
+                <li><a href="#home" class="nav-link flex row j-between a-center"><i class="fa-solid fa-home nav-icons"></i><span class="nav-txt">Home</span></a></li>
+                <li><a href="#about" class="nav-link flex row j-between a-center"><i class="fa-solid fa-address-card nav-icons"></i><span class="nav-txt">About</span></a></li>
+                <li><a href="#project" class="nav-link flex row j-between a-center"><i class="fa-solid fa-shapes nav-icons"></i><span class="nav-txt">Projects</span></a></li>
+                <li><a href="#contact" class="nav-link flex row j-between a-center"><i class="fa-solid fa-user nav-icons"></i><span class="nav-txt">Contact</span></a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <!-- HOME -->
+        <section id="home"></section>
+
+        <!-- ABOUT -->
+        <section id="about"></section>
+
+        <!-- PROJECTS -->
+        <section id="project"></section>
         
+        <!-- CONTACT -->
+        <section id="contact"></section>
+
     </main>
 </body>
 </html>
