hover-header-added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,23 @@
 
     <main>
         <!-- HOME -->
-        <section id="home"></section>
+        <section id="home">
+            <div class="hero-txt">
+                <h1>
+                    hi! I'm
+                    <span class="name">Utkarsh Singh Khokhar</span>
+                    and I create websites. 
+                    <i class="fa-regular fa-hand-peace"></i>
+                </h1>
+
+                <a href="#" target="_blank">
+                <button class="resume-btn">
+                        <i class="fa-regular fa-file"></i>
+                        Resume
+                    </button>
+                </a>
+            </div>
+        </section>
 
         <!-- ABOUT -->
         <section id="about"></section>
