home-page-added

--- a/index.html
+++ b/index.html
@@ -23,14 +23,19 @@
 
     <main>
         <!-- HOME -->
-        <section id="home">
+        <section id="home" class="flex col j-around a-center">
+            <div class="banner">
+                <h1>Hello, World!</h1>
+                <img src="./assets/img-template-svg.svg" alt="" class="banner-img">
+            </div>
+            
             <div class="hero-txt">
-                <h1>
-                    hi! I'm
-                    <span class="name">Utkarsh Singh Khokhar</span>
+                <h2>
+                    hi! I'm <br>
+                    <span class="name">Utkarsh Singh Khokhar</span> <br>
                     and I create websites. 
                     <i class="fa-regular fa-hand-peace"></i>
-                </h1>
+                </h2>
 
                 <a href="#" target="_blank">
                 <button class="resume-btn">
@@ -38,6 +43,32 @@
                         Resume
                     </button>
                 </a>
+            </div>
+
+            <div class="social-container flex j-center a-center wrap">
+                    <a class="social-link" href="mailto:usk172004@gmail.com">
+                        <i class="fa-regular fa-envelope"></i>
+                    </a>
+
+                    <a class="social-link" href="https://wa.me/919548010814?text=Hey%20there%21" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </a>
+
+                    <a class="social-link" href="https://discordapp.com/users/USK#8284" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-brands fa-discord"></i>
+                    </a>
+
+                    <a class="social-link" href="https://github.com/USKhokhar" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+
+                    <a class="social-link" href="https://www.linkedin.com/in/utkarsh-singh-khokhar-177662224/" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+
+                    <a class="social-link" href="https://www.instagram.com/u.s.khokhar/" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
             </div>
         </section>
 
