--- a/index.html
+++ b/index.html
@@ -73,7 +73,20 @@
         </section>
 
         <!-- ABOUT -->
-        <section id="about"></section>
+        <section id="about">
+            <article class="txt-container">
+                <h3>What do I do?</h3>
+                <p class="about-txt">
+                    Being an art enthusiast, I crave for creative explorations. I regularly sail my voyages in the vast oceans of ingenuity. As a result of which, I’m a guy who can design webpages for you. After designing your pages, you don’t need to look for a nerdy developer out there to build that page. I’m quite a narcissict when it comes to my work, so why would I give my design to other guy for developement. Considering all of that, I’m a front-end developer who can make your own website go live on the interenet. But what about the content you are going to showcase on your website... don’t worry, I got you covered. Your little man over here is an avid reader and occasional writer.
+                    <br><br>
+                    So basically, I’ve got what it takes to give you all that you need! 
+                    <br>
+                    See you on the other side, mate!
+                    <br><br>
+                    <strong><i class="fa-regular fa-face-smile"></i></strong>
+                </p>
+            </article>
+        </section>
 
         <!-- PROJECTS -->
         <section id="project"></section>
