project-page-added

--- a/index.html
+++ b/index.html
@@ -89,7 +89,37 @@
         </section>
 
         <!-- PROJECTS -->
-        <section id="project"></section>
+        <section id="project">
+            <article class="txt-container project-container flex col">
+                <h3 class="project-head">What I've done...</h3>
+                <div class="slider">
+                    <article class="card j-center a-center">
+                        <img src="./assets/img-template-svg.svg" alt="" class="project-img">
+                        <a href="#" class="project-link">Project Name</a>
+                    </article>
+                    <article class="card j-center a-center">
+                        <img src="./assets/img-template-svg.svg" alt="" class="project-img">
+                        <a href="#" class="project-link">Project Name</a>
+                    </article>
+                    <article class="card j-center a-center">
+                        <img src="./assets/img-template-svg.svg" alt="" class="project-img">
+                        <a href="#" class="project-link">Project Name</a>
+                    </article>
+                    <article class="card j-center a-center">
+                        <img src="./assets/img-template-svg.svg" alt="" class="project-img">
+                        <a href="#" class="project-link">Project Name</a>
+                    </article>
+                    <article class="card j-center a-center">
+                        <img src="./assets/img-template-svg.svg" alt="" class="project-img">
+                        <a href="#" class="project-link">Project Name</a>
+                    </article>
+                    <article class="card j-center a-center">
+                        <img src="./assets/img-template-svg.svg" alt="" class="project-img">
+                        <a href="#" class="project-link">Project Name</a>
+                    </article>
+                </div>
+            </article>
+        </section>
         
         <!-- CONTACT -->
         <section id="contact"></section>
