contact-page-added

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <section id="about">
             <article class="txt-container">
                 <h3>What do I do?</h3>
-                <p class="about-txt">
+                <p class="txt">
                     Being an art enthusiast, I crave for creative explorations. I regularly sail my voyages in the vast oceans of ingenuity. As a result of which, I’m a guy who can design webpages for you. After designing your pages, you don’t need to look for a nerdy developer out there to build that page. I’m quite a narcissict when it comes to my work, so why would I give my design to other guy for developement. Considering all of that, I’m a front-end developer who can make your own website go live on the interenet. But what about the content you are going to showcase on your website... don’t worry, I got you covered. Your little man over here is an avid reader and occasional writer.
                     <br><br>
                     So basically, I’ve got what it takes to give you all that you need! 
@@ -122,7 +122,53 @@
         </section>
         
         <!-- CONTACT -->
-        <section id="contact"></section>
+        <section id="contact" class="flex wrap">
+            <article class="txt-container footer grid">
+                <h3>Contact Me</h3>
+
+                <p class="txt">
+                    You scrolled to the bottom... must’ve been curious about something. And I, being a very supportive person highyly bappreciate the process of resolving issues of curious beings. So please consider providing me the pleasure of resolving your stuff.
+                    <br><br>
+                    If not that, we can have a casual chit-chat... would be fun.
+                </p>
+
+                <div class="social-container flex j-center a-center wrap">
+                    <a class="social-link" href="mailto:usk172004@gmail.com">
+                        <i class="fa-regular fa-envelope"></i>
+                    </a>
+
+                    <a class="social-link" href="https://wa.me/919548010814?text=Hey%20there%21" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </a>
+
+                    <a class="social-link" href="https://discordapp.com/users/USK#8284" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-brands fa-discord"></i>
+                    </a>
+
+                    <a class="social-link" href="https://github.com/USKhokhar" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+
+                    <a class="social-link" href="https://www.linkedin.com/in/utkarsh-singh-khokhar-177662224/" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+
+                    <a class="social-link" href="https://www.instagram.com/u.s.khokhar/" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                </div>
+            </article>
+
+            <form action="mailto:usk172004@gmail.com" method="post" class="grid">
+                <h2>Fill out this form</h2>
+                <div class="input-container grid">
+                    <input type="text" name="full_name" id="fullName" placeholder="Enter Your Full Name">
+                    <input type="text" name="message" id="msg" placeholder="Enter Your Message">
+
+                    <input type="submit" value="Send" class="send-btn">
+                </div>
+            </form>
+        </section>
 
     </main>
 </body>
