hero-img-anim-added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <header class="flex j-around a-center col">
-        <img src="./assets/img-template-svg.svg" alt="" class="hero-img">
+        <div class="hero-wrap">
+            <img src="./assets/my-img.svg" alt="" class="hero-img">
+        </div>
         <nav>
             <ul class="flex col">
                 <li><a href="#home" class="nav-link flex row j-between a-center"><i class="fa-solid fa-home nav-icons"></i><span class="nav-txt">Home</span></a></li>
@@ -26,7 +28,9 @@
         <section id="home" class="flex col j-around a-center">
             <div class="banner">
                 <h1>Hello, World!</h1>
-                <img src="./assets/img-template-svg.svg" alt="" class="banner-img">
+                <div class="img-wrap">
+                    <img src="./assets/my-img.svg" alt="" class="banner-img">
+                </div>
             </div>
             
             <div class="hero-txt">
