--- a/index.html
+++ b/index.html
@@ -91,6 +91,23 @@
 
         <!-- PROJECTS -->
         <section id="project">
+            <article class="txt-container">
+                <h3>What I've done...</h3>
+
+                <div class="container flex wrap j-around a-center" >
+                    <div class="proj-cont grid">
+                        <img src="./assets/img-template-svg.svg" alt="" class="project-img">
+                        <a href="#" class="project-link">Project Link</a>
+                    </div>
+                    <div class="proj-cont grid">
+                        <img src="./assets/img-template-svg.svg" alt="" class="project-img">
+                        <a href="#" class="project-link">Project Link</a>
+                    </div>
+                </div>
+
+                <a href="#" class="see-more">See More &rAarr;</a>
+                
+            </article>
         </section>
         
         <!-- CONTACT -->
