--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <header class="flex j-around a-center col">
         <img src="./assets/my-img.svg" alt="" class="hero-img">
 
+        <input type="checkbox" name="nav-bars" id="nav-toggle">
+        <label for="nav-toggle">
+            <i class="fa-solid fa-bars"></i>
+        </label>
+
         <nav>
             <ul class="flex col">
                 <li><a href="#home" class="nav-link flex row j-between a-center"><i class="fa-solid fa-home nav-icons"></i><span class="nav-txt">Home</span></a></li>
