--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <i class="fa-regular fa-hand-peace"></i>
                 </h2>
 
-                <a href="#" target="_blank">
+                <a href="./coming-soon.html" target="_blank">
                 <button class="resume-btn">
                         <i class="fa-regular fa-file"></i>
                         Resume
@@ -101,16 +101,16 @@
 
                 <div class="container flex wrap j-around a-center" >
                     <div class="proj-cont grid">
-                        <img src="./assets/img-template-svg.svg" alt="" class="project-img">
-                        <a href="#" class="project-link">Project Link</a>
+                        <img src="./assets/calculator.JPG" alt="" class="project-img">
+                        <a href="https://calculator-usk.netlify.app/" class="project-link">Calculator</a>
                     </div>
                     <div class="proj-cont grid">
-                        <img src="./assets/img-template-svg.svg" alt="" class="project-img">
-                        <a href="#" class="project-link">Project Link</a>
+                        <img src="./assets/quote.JPG" alt="" class="project-img">
+                        <a href="https://quote-generator-usk.netlify.app/" class="project-link">Quote Generator</a>
                     </div>
                 </div>
 
-                <a href="#" class="see-more">See More &rAarr;</a>
+                <a href="./coming-soon.html" class="see-more">See More &rAarr;</a>
                 
             </article>
         </section>
